Reformat Java solutions with Intellij